WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157051
Fix assertion when downloading with NSURLSession after
r198955
https://bugs.webkit.org/show_bug.cgi?id=157051
Summary
Fix assertion when downloading with NSURLSession after r198955
Alex Christensen
Reported
2016-04-26 16:33:48 PDT
Fix assertion when downloading with NSURLSession after
r198955
Attachments
Patch
(1.54 KB, patch)
2016-04-26 16:34 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-04-26 16:34:20 PDT
Created
attachment 277421
[details]
Patch
Alex Christensen
Comment 2
2016-04-26 16:41:59 PDT
rdar://problem/25827412
Brent Fulgham
Comment 3
2016-04-26 17:10:03 PDT
Comment on
attachment 277421
[details]
Patch This looks good to me, but you need a WK2 reviewer. :-(
WebKit Commit Bot
Comment 4
2016-04-27 12:29:33 PDT
Comment on
attachment 277421
[details]
Patch Clearing flags on attachment: 277421 Committed
r200142
: <
http://trac.webkit.org/changeset/200142
>
WebKit Commit Bot
Comment 5
2016-04-27 12:29:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug