Fix assertion when downloading with NSURLSession after r198955 https://bugs.webkit.org/show_bug.cgi?id=157051

Patch by Alex Christensen <achristensen@webkit.org> on 2016-04-27
Reviewed by Brady Eidson.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::continueDecidePendingDownloadDestination):

Canonical link: https://commits.webkit.org/175195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200142 268f45cc-cd09-0410-ab3c-d52691b4dbfc